IDE: IE6 fix for the large spacing between the command button list on the bottom left

--- a/Robo-IDE/roboide/static/css/projpage.css
+++ b/Robo-IDE/roboide/static/css/projpage.css
@@ -28,6 +28,7 @@
 
 #proj-fileops li { 
   list-style-type: none;
+  border: 1px solid white;
 }
 
 #proj-fileops li a { 
